Fix white space

--- a/styles.css
+++ b/styles.css
@@ -42,6 +42,7 @@ body {
   padding-bottom: 11.75rem;
   width: 100%;
   height: auto;
+  min-height: 100vh;
 }
 
 .wrapper .header {
